--- a/SpaceDefense/SpaceDefense.csproj
+++ b/SpaceDefense/SpaceDefense.csproj
@@ -49,12 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cannon.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Cursor.cs" />
     <Compile Include="Vector.cs" />
     <Compile Include="Laser.cs" />
     <Compile Include="Level.cs" />
