Bullets and shooting

--- a/SpaceDefense/SpaceDefense.csproj
+++ b/SpaceDefense/SpaceDefense.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bullet.cs" />
     <Compile Include="Cannon.cs" />
     <Compile Include="Cursor.cs" />
     <Compile Include="Player.cs" />
