--- a/SpaceDefense/SpaceDefense.csproj
+++ b/SpaceDefense/SpaceDefense.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Button.cs" />
     <Compile Include="Cannon.cs" />
     <Compile Include="Cursor.cs" />
+    <Compile Include="HealthBar.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Vector.cs" />
